Fix native access warning